<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/shitText"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportActivity">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="107dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="681dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/report"
        android:textSize="15dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/idText"
        android:layout_width="114dp"
        android:layout_height="31dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="74dp"
        android:layout_marginEnd="278dp"
        android:layout_marginBottom="626dp"
        android:text="@string/id" />

    <EditText
        android:id="@+id/idEdit"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_alignBottom="@id/idText"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="169dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="615dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/dateText"
        android:layout_width="114dp"
        android:layout_height="31dp"
        android:layout_alignLeft="@id/idText"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="-9dp"
        android:layout_marginTop="138dp"
        android:layout_marginEnd="273dp"
        android:layout_marginBottom="556dp"
        android:text="@string/date"
        />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_alignBottom="@id/dateText"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="173dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="546dp"
        android:ems="10"
        android:inputType="none"/>

    <TextView
        android:id="@+id/empnumText"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="209dp"
        android:layout_marginEnd="259dp"
        android:layout_marginBottom="484dp"
        android:text="@string/employee_num" />

    <EditText
        android:id="@+id/empnumEdit"
        android:layout_width="wrap_content"
        android:layout_height="61dp"
        android:layout_alignBottom="@id/empnumText"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="173dp"
        android:layout_marginTop="199dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="471dp"
        android:ems="10" />

    <TextView
        android:id="@+id/nameText"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="275dp"
        android:layout_marginEnd="245dp"
        android:layout_marginBottom="421dp"
        android:text="@string/employee_name" />

    <EditText
        android:id="@+id/nameEdit"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="176dp"
        android:layout_marginTop="269dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="406dp"
        android:ems="10" />

    <RadioGroup
        android:id="@+id/genderGroup"
        android:layout_width="129dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="371dp"
        android:layout_marginEnd="268dp"
        android:layout_marginBottom="281dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/maleradio"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/genderGroup"
            android:layout_weight="1"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/femaleradio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/genderGroup"
            android:layout_weight="1"
            android:text="@string/female" />
    </RadioGroup>

    <TextView
        android:id="@+id/genderText"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="333dp"
        android:layout_marginEnd="273dp"
        android:layout_marginBottom="362dp"
        android:text="@string/gender" />

    <TextView
        android:id="@+id/shiftLabel"
        android:layout_width="107dp"
        android:layout_height="37dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="179dp"
        android:layout_marginTop="333dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="361dp"
        android:text="@string/shift" />

    <Spinner
        android:id="@+id/shiftSpinner"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="179dp"
        android:layout_marginTop="387dp"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="298dp"
        android:entries="@array/shift_type"
        android:spinnerMode="dropdown"/>

    <TextView
        android:id="@+id/departText"
        android:layout_width="109dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="462dp"
        android:layout_marginEnd="278dp"
        android:layout_marginBottom="239dp"
        android:text="@string/department" />

    <EditText
        android:id="@+id/departEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="173dp"
        android:layout_marginTop="449dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="225dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/positionText"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="515dp"
        android:layout_marginEnd="270dp"
        android:layout_marginBottom="179dp"
        android:text="@string/position" />

    <EditText
        android:id="@+id/positionEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="175dp"
        android:layout_marginTop="511dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="158dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/injuryTypelabel"
        android:layout_width="138dp"
        android:layout_height="34dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="576dp"
        android:layout_marginEnd="252dp"
        android:layout_marginBottom="121dp"
        android:text="@string/incident" />

    <Spinner
        android:id="@+id/injuryType"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="620dp"
        android:layout_marginEnd="249dp"
        android:layout_marginBottom="72dp"
        android:entries="@array/incident_type"
        />

    <Spinner
        android:id="@+id/injuryPart"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:layout_alignStart="@+id/injuryType"
        android:layout_alignBottom="@id/injuryType"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="177dp"
        android:layout_marginTop="622dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="70dp" />

    <TextView
        android:id="@+id/injuryLabel"
        android:layout_width="138dp"
        android:layout_height="34dp"
        android:layout_alignLeft="@id/injuryPart"
        android:layout_alignBottom="@id/injuryTypelabel"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="194dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="578dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="118dp"
        android:text="@string/injury" />

    <Button
        android:id="@+id/reportBtn"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="82dp"
        android:layout_marginTop="671dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="12dp"
        android:text="@string/report_btn"
        android:background="@color/btncolor"
        android:textStyle="bold"/>

</RelativeLayout>